updatedd bin/run-perf-regression.sh